--- a/package.json
+++ b/package.json
@@ -1,21 +1,22 @@
 {
-	"name": "shp",
+	"name": "dummy-ecommerce",
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
 		"react": "^17.0.0",
 		"react-dom": "^17.0.0",
 		"react-flip-move": "^3.0.4",
+		"react-router-dom": "^6.3.0",
 		"react-scripts": "5.0.1",
 		"semantic-ui-less": "^2.4.1",
 		"semantic-ui-react": "^2.1.2",
 		"styled-components": "^5.3.5"
 	},
 	"scripts": {
-    "start": "craco start",
-    "build": "craco build",
-    "test": "craco test",
-    "eject": "craco eject"
+		"start": "craco start",
+		"build": "craco build",
+		"test": "craco test",
+		"eject": "craco eject"
 	},
 	"eslintConfig": {
 		"extends": [
@@ -28,6 +29,18 @@
 				"error",
 				{
 					"max": 150
+				}
+			],
+			"max-lines-per-function": [
+				"error",
+				{
+					"max": 35
+				}
+			],
+			"max-statements": [
+				"error",
+				{
+					"max": 8
 				}
 			],
 			"indent": [
