--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 		"react": "^17.0.0",
 		"react-dom": "^17.0.0",
 		"react-flip-move": "^3.0.4",
+		"react-lazy-load-image-component": "^1.5.4",
 		"react-router-dom": "^6.3.0",
 		"react-scripts": "5.0.1",
 		"semantic-ui-less": "^2.4.1",
@@ -28,7 +29,7 @@
 			"max-lines": [
 				"error",
 				{
-					"max": 150
+					"max": 180
 				}
 			],
 			"max-lines-per-function": [
@@ -55,7 +56,31 @@
 				2,
 				"always-multiline"
 			]
-		}
+		},
+		"overrides": [
+			{
+				"files": [
+					"src/components/**",
+					"src/App*",
+					"src/views/**"
+				],
+				"excludedFiles": "*.test.js",
+				"rules": {
+					"max-lines-per-function": [
+						"error",
+						{
+							"max": 120
+						}
+					],
+					"max-statements": [
+						"error",
+						{
+							"max": 12
+						}
+					]
+				}
+			}
+		]
 	},
 	"browserslist": {
 		"production": [
