styles: minimal theme changes

--- a/src/semantic-ui/theme.config
+++ b/src/semantic-ui/theme.config
@@ -89,5 +89,5 @@
 *******************************/
 
 @import (multiple) '~semantic-ui-less/theme.less';
-@fontPath: '../../../themes/@{theme}/assets/fonts';
+@fontPath: '../../../../../src/themes/@{theme}/assets/fonts';
 /* End Config */
