--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
 					"src/components/**",
 					"src/App*",
 					"src/views/**",
-					"src/**.test.js"
+					"src/route/**"
 				],
 				"rules": {
 					"max-lines-per-function": [
