--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "dummy-ecommerce",
 	"version": "0.1.0",
 	"private": true,
-	"homepage": "https://bvrbryn445.github.io/dummy-ecommerce",
+	"homepage": "https://dapper-pastelito-04ff24.netlify.app/",
 	"dependencies": {
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
